# hs_hash

./: CMakeLists.txt  README.md
include/: hs_hash.h
